# fvdb-reality-capture

./: .gitignore  AGENTS.md  README.md  pyproject.toml  regenerate_plots.py
.github/workflows/: debug.yml  docs.yml  gsplat-l4-tests.yml  issue-triage.yml  nightly.yml  publish.yml  tests.yml
docs/: CNAME  conf.py  index.rst  installation.rst
docs/api/: frgs.rst  radiance_fields.rst  sfm_scene.rst  tools.rst  transforms.rst
docs/api/frgs/: convert.rst  download.rst  evaluate.rst  mesh_basic.rst  mesh_dlnr.rst  points.rst  reconstruct.rst  resume.rst  show.rst  show_data.rst
docs/tutorials/: frgs.rst  radiance_field_and_mesh_reconstruction.md  sensor_data_loading_and_manipulation.md
fvdb_reality_capture/: __init__.py
fvdb_reality_capture/cli/: __init__.py
fvdb_reality_capture/cli/frdev/: __init__.py  _s3.py
fvdb_reality_capture/cli/frgs/: __init__.py  _common.py  _convert.py  _download.py  _evaluate.py  _mesh_basic.py  _mesh_dlnr.py  _points.py  _reconstruct.py  _resume.py  _show.py  _show_data.py
fvdb_reality_capture/dev/: __init__.py  s3.py
fvdb_reality_capture/foundation_models/: __init__.py  openclip.py  sam1.py  sam2.py
fvdb_reality_capture/radiance_fields/: __init__.py  _gaussian_rendering.py  base_gaussian_splat_optimizer.py  camera_pose_adjust.py  gaussian_splat_dataset.py  gaussian_splat_optimizer.py  gaussian_splat_optimizer_mcmc.py  gaussian_splat_reconstruction.py  gaussian_splat_reconstruction_writer.py
fvdb_reality_capture/radiance_fields/_private/: appearance_adjust.py  lpips.py  utils.py
fvdb_reality_capture/sfm_scene/: __init__.py  _load_colmap_scene.py  _load_e57_scene.py  _load_simple_scene.py  scene_attribute.py  sfm_cache.py  sfm_metadata.py  sfm_scene.py
fvdb_reality_capture/sfm_scene/_colmap_utils/: database.py  scene_manager.py
fvdb_reality_capture/tools/: __init__.py  _common.py  _download_example_data.py  _export_splats_to_usdz.py  _mesh_from_splats.py  _mesh_from_splats_dlnr.py  _point_cloud_from_splats.py  _tsdf_from_splats.py  _tsdf_from_splats_dlnr.py
fvdb_reality_capture/transforms/: __init__.py  base_transform.py  compose.py  crop_scene.py  downsample_images.py  filter_images_with_low_points.py  identity.py  normalize_scene.py  percentile_filter_points.py  transform_scene.py  undistort_images.py
notebooks/: .gitignore  COLMAP.ipynb  Dockerfile_COLMAP  Dockerfile_COLMAP_v2  run.py  run_colmap.py
scripts/: create_isaac_ready_files.py  extract_geo_ortho.py  plot_sfm_dataset_images.py
tests/benchmarks/: __init__.py  benchmark.py  benchmark_config.yaml  contract.py  generate_benchmark_checkpoints.py  test_3dgs.py  test_benchmark_contract.py  test_build_gsplat_cli_args.py  test_comparison_benchmark.py  test_format_for_gh_benchmark.py  test_git_utils.py
tests/benchmarks/comparative/: DOCKER_README.md  FAIRNESS_ANALYSIS.md  benchmark_config.yaml  comparison_benchmark.py  extract_config_params.py  format_for_gh_benchmark.py  garden_matrix.yml  gsplat_l4_diagnostic_matrix.yml  gsplat_l4_warmup_test_matrix.yml  nightly_matrix.yml  profile_inside_container.py  smoke_test_matrix.yml
tests/benchmarks/comparative/benchmark_utils/: __init__.py  _common.py  run_fvdb_training.py  run_gsplat_training.py
tests/benchmarks/comparative/docker/: Dockerfile  Dockerfile.blackwell  benchmark_environment.yml  docker-compose.yml  uid_entrypoint.sh
tests/unit/: common.py  test_gaussian_splat_dataset.py  test_gaussian_splat_optimizer.py  test_gaussian_splat_optimizer_mcmc.py  test_load_colmap_scene.py  test_s3.py  test_scene_attributes.py  test_sfm_metadata.py  test_sfm_scene.py  test_training.py  test_transforms.py  test_tsdf_camera_model_validation.py  test_undistort_transform.py
(+11 files in other folders)
