[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fvdb_reality_capture"
version = "0.0.0"
description = "fVDB Reality Capture Toolbox."
authors = [
    {name = "Francis Williams", email = "francis@fwilliams.info"},
    {name = "Jonathan Swartz", email = "jonathan@jswartz.info"},
    {name = "Mark Harris", email = "MHarris@nvidia.com"},
    {name = "Matthew Cong", email = "mcong@nvidia.com"},
    {name = "Brent Bartlett", email = "bbartlett@nvidia.com"},
    {name = "Zoe Lalena", email = "zlalena@nvidia.com"},
    {name = "Christopher Horvath", email = "chorvath@nvidia.com"},
    {name = "Efty Sifakis", email = "esifakis@nvidia.com"},
    {name = "Andrew Reidmeyer", email = "areidmeyer@nvidia.com"},
    {name = "Petra Hapalova", email = "phapalova@nvidia.com"},
    {name = "Ken Museth", email = "kmuseth@nvidia.com"},
]
license="Apache-2.0"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "boto3",
    "dlnr_lite",
    "numpy>=2.0.0",
    "opencv-python-headless",
    "point-cloud-utils",
    "pye57",
    "pyproj",
    "sam2==1.1.0",
    "scikit-image",
    "scipy",
    "tensorboard",
    "torch>=2.7.0",
    "torchvision",
    "tqdm",
    "tyro",
    "usd-core",
    "msgpack",
    "types-usd",
]

[project.scripts]
frgs = "fvdb_reality_capture.cli.frgs:frgs"
frdev = "fvdb_reality_capture.cli.frdev:frdev"

[project.urls]
Homepage = "https://github.com/openvdb/fvdb-reality-capture"
Issues = "https://github.com/openvdb/fvdb-reality-capture/issues"

# pyproject.toml
[tool.setuptools.packages.find]
include = ["fvdb_reality_capture*"]    # Glob patterns for package names
